--- a/templates/users/create_user.html
+++ b/templates/users/create_user.html
@@ -21,6 +21,7 @@
     <label>Role</label>
     <select name="role" class="form-control">
       <option value="teacher">Teacher</option>
+      <option value="student">Student</option>
       <option value="admin">Admin</option>
     </select>
   </div>
