--- a/templates/users/create_user.html
+++ b/templates/users/create_user.html
@@ -17,6 +17,12 @@
     <label>Password</label>
     <input type="password" name="password" class="form-control" required>
   </div>
+
+  <div class="mb-3">
+  <label>Confirm Password</label>
+  <input type="password" name="confirm_password" class="form-control" required>
+</div>
+
   <div class="mb-3">
     <label>Role</label>
     <select name="role" class="form-control">
