--- a/templates/layout.html
+++ b/templates/layout.html
@@ -159,10 +159,10 @@
 
       {% elif session.get('role') == 'student' %}
         <a class="nav-link" href="{{ url_for('dashboard.index') }}">Dashboard</a>
-        <a class="nav-link" href="{{ url_for('student_routes.my_classes') }}">My Class</a>
-        <a class="nav-link" href="{{ url_for('student_routes.my_subjects') }}">My Subjects</a>
-        <a class="nav-link" href="{{ url_for('student_routes.my_grades') }}">My Grades</a>
-        <a class="nav-link" href="{{ url_for('student_routes.my_attendance') }}">Attendance</a>
+        <a class="nav-link" href="{{ url_for('classes.manage_classes') }}">My Class</a>
+        <a class="nav-link" href="{{ url_for('subjects.subject_list') }}">My Subjects</a>
+        <a class="nav-link" href="{{ url_for('grade.list_grades') }}">My Grades</a>
+        <a class="nav-link" href="{{ url_for('attendance_routes.attendance') }}">Attendance</a>
 
       {% else %}
         <a class="nav-link" href="{{ url_for('auth.login') }}">Login</a>
