--- a/templates/dashboard_admin.html
+++ b/templates/dashboard_admin.html
@@ -119,7 +119,7 @@
         <a href="{{ url_for('subjects.subject_list') }}" class="btn btn-outline-primary">
           <i class="bi bi-book"></i> Manage Subjects
         </a>
-        <a href="{{ url_for('subjects.class_list') }}" class="btn btn-outline-success">
+        <a href="{{ url_for('classes.manage_classes') }}" class="btn btn-outline-success">
           <i class="bi bi-building"></i> Manage Classes
         </a>
         <a href="{{ url_for('student.list_students') }}" class="btn btn-outline-info">
