--- a/templates/layout.html
+++ b/templates/layout.html
@@ -143,7 +143,7 @@
     <nav class="nav flex-column">
       {% if session.get('role') == 'admin' %}
         <a class="nav-link {% if request.endpoint == 'dashboard.index' %}active{% endif %}" href="{{ url_for('dashboard.index') }}">Dashboard</a>
-        <a class="nav-link {% if request.endpoint == 'subjects.class_list' %}active{% endif %}" href="{{ url_for('classes.manage_classes') }}">Classes</a>
+        <a class="nav-link {% if request.endpoint == 'classes.manage_classes' %}active{% endif %}" href="{{ url_for('classes.manage_classes') }}">Classes</a>
         <a class="nav-link {% if request.endpoint == 'subjects.subject_list' %}active{% endif %}" href="{{ url_for('subjects.subject_list') }}">Subjects</a>
         <a class="nav-link {% if request.endpoint == 'student.list_students' %}active{% endif %}" href="{{ url_for('student.list_students') }}">Students</a>
         <a class="nav-link {% if request.endpoint == 'teacher_routes.teachers' %}active{% endif %}" href="{{ url_for('teacher_routes.teachers') }}">Teachers</a>
@@ -169,7 +169,7 @@
       {% endif %}
     </nav>
 
-    {% if session.get('username') %}
+    {% if session.get('email') %}
       <div class="bottom">
         <p>👋 {{ session.get('username') | capitalize }}</p>
         <a href="{{ url_for('auth.logout') }}" class="btn btn-logout">Logout</a>
